--- a/templates/index.njk
+++ b/templates/index.njk
@@ -36,13 +36,13 @@
 				<div class="jumbotron text-center">
 					<h1>Compostable</h1>
 				</div>
-				<div class="row">
+				<div class="row col-md-6 col-md-offset-md-6">
 					<div id="leaflet-container"></div>
                 </div>
 				<div class="row">
 					<p class="text-center lead">
 						In the super pre-alpha release, you can see that the act of filling up your bin with compost
-						will trigger an alert to a nearby driver.  Hopefully, he picks up your stuff.
+						will trigger an alert to a nearby driver.  Hopefully, they pick up your stuff.
 					</p>
 				</div>
 			</main>
